--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-project(tsip)
+project(StSy)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -17,18 +17,14 @@ FILE(GLOB TSIP_DEPENDS src/common/*.hpp src/common/*.cpp src/lib/*.hpp src/lib/*
 
 
 
-find_package(Boost REQUIRED)
+find_package(Boost REQUIRED COMPONENTS system)
 find_package(fmt REQUIRED)
 
 
-add_library(tsip_static STATIC src/main.cpp)
-add_library(tsip_shared SHARED ${TSIP_DEPENDS})
-add_executable(client src/client/main.cpp)
-add_executable(server src/server/main.cpp)
-add_executable(tests tests/ip.cpp)
 
-target_link_libraries(tsip_static PRIVATE fmt::fmt)
-target_link_libraries(tsip_shared PRIVATE fmt::fmt)
-target_link_libraries(server PRIVATE fmt::fmt tsip_shared)
-target_link_libraries(client PRIVATE fmt::fmt tsip_shared)
-target_link_libraries(tests PRIVATE Catch2::Catch2WithMain tsip_shared fmt::fmt)
+add_executable(server src/main.cpp)
+
+target_link_libraries(server PRIVATE 
+                      fmt::fmt 
+                      Boost::boost
+                      Boost::system)
